# Bijvangst

./: .gitignore  Bijvangst.cfg.in  CMakeLists.txt  README  log4crc.in
UnitTest/: CMakeLists.txt
inc/: args.h  bool.h  debug.h  def.h  diagnose.h  error.h  error_code.h  limit.h  version.h  version.h.in
src/: CMakeLists.txt  args.c  buildnumber.h  main.c  version.c
